# caps-lock-indicator

./: Cargo.toml  README.md  justfile
resources/: app.desktop  app.metainfo.xml  app.policy
src/: main.rs
