[package]
name = "caps-lock-indicator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shows whether Caps Lock is currently active"
repository = "https://github.com/pop-os/cosmic-app-template"

[profile.release]
opt-level = "s"
panic = "abort"
lto = "fat"

[dependencies]
evdev = { version = "0.13.1", features = ["tokio"] }
# futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
x11rb = "0.13.1"
zbus = { version = "5.5.0", features = ["tokio"] }
zbus_polkit = { version = "5.0.0", default-features = false, features = ["tokio"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]
