[package]
name = "caps-lock-indicator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shows whether Caps Lock is currently active"
repository = "https://github.com/pop-os/cosmic-app-template"

[profile.release]
opt-level = "s"
panic = "abort"
lto = "fat"

[dependencies]
inotify = "0.11.0"
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]
